--- a/app.json
+++ b/app.json
@@ -31,6 +31,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "2d2e924c-68b0-468f-8888-0c5a464f94ff"
+      }
     }
   }
 }
