--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,8 @@
       "channel": "preview"
     },
     "production": {
-      "channel": "production"
+      "channel": "production",
+      "node": "18.0.0"
     },
     "androidapk": {
       "android": {
