fix/ensure be a exclude items be list removed

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "planeja-plus",
+    "name": "Listas simples - Planeja Plus",
     "slug": "planeja-plus",
     "version": "1.0.0",
     "orientation": "portrait",
