--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.22",
+    "expo": "~51.0.24",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.18",
+    "expo-notifications": "~0.28.14",
+    "expo-router": "~3.5.20",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
