--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-notifications": "~0.28.14",
