--- a/app.json
+++ b/app.json
@@ -29,7 +29,22 @@
     },
     "plugins": [
       "expo-router",
-      "expo-notifications"
+      "expo-notifications",
+      [
+        "react-native-google-mobile-ads",
+        {
+          "androidAppId": "ca-app-pub-4712672148809066~2178403059",
+          "iosAppId": "ca-app-pub-4712672148809066~2178403059"
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
@@ -42,11 +57,13 @@
         "projectId": "2d2e924c-68b0-468f-8888-0c5a464f94ff"
       }
     },
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
+    "runtimeVersion": "1.0.0",
     "updates": {
       "url": "https://u.expo.dev/2d2e924c-68b0-468f-8888-0c5a464f94ff"
     }
+  },
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-4712672148809066~2178403059",
+    "ios_app_id": "ca-app-pub-4712672148809066~2178403059"
   }
 }
