--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
@@ -21,7 +19,7 @@
     "@react-navigation/native": "^6.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.26",
+    "expo": "^51.0.28",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
