--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dev-plugins/react-query": "^0.0.7",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.52.0",
+    "axios": "^1.7.4",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "expo": "^51.0.28",
