--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.52.0",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
+    "compression": "^1.7.4",
     "date-fns": "^3.6.0",
     "expo": "^51.0.28",
     "expo-checkbox": "~3.0.0",
@@ -36,6 +37,9 @@
     "expo-system-ui": "~3.0.7",
     "expo-updates": "~0.25.22",
     "expo-web-browser": "~13.0.3",
+    "express": "^4.19.2",
+    "firebase": "^10.13.0",
+    "morgan": "^1.10.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
