--- a/app.json
+++ b/app.json
@@ -37,9 +37,7 @@
         "projectId": "2d2e924c-68b0-468f-8888-0c5a464f94ff"
       }
     },
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
+    "runtimeVersion": "1.0.0",
     "updates": {
       "url": "https://u.expo.dev/2d2e924c-68b0-468f-8888-0c5a464f94ff"
     }
